--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 .idea/**/dictionaries
 .idea/**/shelf
 
+# Private Properties
+Application/src/main/resources/private.properties
+
 # AWS User-specific
 .idea/**/aws.xml
 
