stash: 기본 dto, entity, repo 구현
+ 변경된 properties 추가
+ schema.sql 추가

--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -3,4 +3,8 @@ spring.application.name=Application
 spring.datasource.url=${db_url}
 spring.datasource.username=${db_username}
 spring.datasource.password=${db_password}
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database=mysql
+spring.devtools.livereload.enabled=false
