--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Application
+spring.datasource.url=jdbc:mysql://localhost:3306/coffee_menu
+spring.datasource.username=root
+spring.datasource.password=tkfkd1004!
+spring.jpa.open-in-view=false
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql= true
+spring.jpa.properties.hibernate.show_sql= true
+#logging.level.org.hibernate=DEBUG
+
