feat: 토큰 이름으로 유저 조회해서 접근 차단 기능 일부 구현

--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.database=mysql
 spring.devtools.livereload.enabled=false
+spring.jpa.show-sql=true
